# sphinx-hoverxref

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml  pip-tools.yaml
.github/workflows/: pip-tools.yaml  pr-preview-links.yaml
docs/: Makefile  conf.py  configuration.rst  development.rst  hoverxref.rst  hoverxref_file.rst  index.rst  installation.rst  mathjax.rst  releasing.rst  requirements.in  requirements.txt  usage.rst  who-is-using-it.rst
docs/_static/css/: custom.css
hoverxref/: __init__.py  domains.py  extension.py  nodeparser.py  registry.py  translators.py  utils.py
hoverxref/_static/css/: furo.css  micromodal.css  tooltipster.custom.css  tooltipster.custom.css_t
hoverxref/_static/js/: hoverxref.js_t  main.js
tests/: conftest.py  test_htmltag.py  test_internals.py  test_jsconf.py  utils.py
tests/examples/bibtex-domain/: conf.py  index.rst
tests/examples/custom-object/: code.rst  conf.py  configuration.rst  index.rst
tests/examples/default/: chapter-i.rst  conf.py  glossary.rst  index.rst
tests/examples/intersphinx/: conf.py  index.rst
tests/examples/prefixdocument/: conf.py  index.rst
tests/examples/python-domain/: api.rst  conf.py  index.rst
